--- a/neww.html
+++ b/neww.html
@@ -74,7 +74,7 @@
             <td>1</td>
             <td >Name in full</td>
             <td colspan="3"><input type="text" id="name" name="name"></td>
-            <td rowspan="4"><div class="box">image</div></td>
+            <td rowspan="4"><input type="file" id="name" name="name"><br><br><div class="box">IMAGE</div></td>
             </tr>
             <tr>
             <td>2</td>
