--- a/A9Q3.html
+++ b/A9Q3.html
@@ -417,7 +417,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 ShopMate | All rights reserved.</p>
+        <p>&copy; 2025 Amazon | All rights reserved.</p>
         <div class="social-links">
             <a href="#">Facebook</a>
             <a href="#">Instagram</a>
