--- a/employee.html
+++ b/employee.html
@@ -211,6 +211,8 @@
           <td>Place: <input type="text" name="formPlace"></td>
           <td>Signature:</td>
           <td><input type="text" name="finalSignature"></td>
+          <tr><td><input type="submit" name="submit"></td></tr>
+
         </tr>
       </table>
     </form>
